# first_django

./: README.md  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_is_published.py  0003_post_image.py
blog/templates/blog/: base.html  post_detail.html  post_list.html
config/: settings.py  urls.py
